syntax = "proto3";

option csharp_namespace = "Basket.API.Grpc";

package BasketApi;

service Basket {
    rpc GetBasket(GetBasketRequest) returns (CustomerBasket) {}
    rpc UpdateBasket(CustomerBasket) returns (CustomerBasket) {}
}

message GetBasketRequest {
    string basket_id = 1;
}

message CustomerBasket {
    string basket_id = 1;
    repeated BasketItem items = 2;

    optional Address shipping_address = 3;
    optional string payment_collection = 4;
}

message BasketItem {
  string product_id = 1;
  string variant_id = 2;
  int32 quantity = 3;
  string title = 4;
  string slug = 5;
  string thumbnail = 6;
  string price = 7;
  int32 available_stock = 8;
  string variant_options = 9;
}

message Address {
  string name = 1;
  string phone = 2;
  string street = 3;
  string city = 4;
  string state = 5;
  string country = 6;
  string zip_code = 7;
}